tests/snapshots/assets__check_file@unit-comment-comment-in-code.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-code.typ
snapshot_kind: text
---
#let /* 1 */ f(/* 2 */ x) = {
  /* 5 */
  context /* 6 */ {
    let /* 1 */ a /* 2 */ = /* 3 */ 1
    let /* 1 */ (/* 2 */ a /* 3 */, /* 4 */ b /* 5 */) /* 6 */ = /* 7 */ (2, 3)
    (/* 2 */ a /* 3 */, /* 4 */ b /* 5 */) /* 6 */ = /* 7 */ (2, 3)
    /* 7 */
    return /* 8 */ none
  }
}
