tests/snapshots/assets__check_file@unit-comment-comment-in-destruct.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-destruct.typ
---
#{
  let (/* test */ a, b) = (1, 2)
  let (a, /* test */ _) = (1, 2)
  let (a: /* test */ h) = (
    a: 1,
  )
}


#let (
// abc
a, b, c,
) = (1, 2, 3)
